# audio-diagnosis

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
configs/: crnn_baseline.yaml
src/audio_diagnosis/: __init__.py
src/audio_diagnosis/data/: preprocessing.py
src/audio_diagnosis/inference/: schemas.py  service.py
src/audio_diagnosis/models/: crnn.py
src/audio_diagnosis/training/: train_crnn.py
